--- a/created.html
+++ b/created.html
@@ -7,14 +7,13 @@
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
 mixpanel.init("ba17d1c1a35919ac5c1077df53859b66");</script><!-- end Mixpanel -->
 
+<script type="text/javascript">
+    mixpanel.track("Account Created");
+  </script>
+
 </head>
 
 <body>
-  
-<script type="text/javascript">
-      mixpanel.track("Page Loaded", {"Page Name": "Account Created"});
-</script>
-    
   <h1><p> <center> <b>Account Created!</b> </center> </p> </h1>
 <h3><center> <b>Thank you for creating your account. You've sent us the following information:</b> </center> </h3>
 <ul><center>
